--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -2909,6 +2909,225 @@ public:
 
 
 
+##  2540.最小公共值(双指针)
+
+```cpp
+class Solution {
+public:
+    int getCommon(vector<int>& nums1, vector<int>& nums2) {
+        int i = 0, j = 0;
+        while(i < nums1.size() && j < nums2.size()) {
+            if(nums1[i] < nums2[j]) i++;
+            else if(nums1[i] > nums2[j]) j++;
+            else return nums1[i];
+        }
+        return -1;
+    }
+};
+```
+
+
+
+```go
+func getCommon(nums1 []int, nums2 []int) int {
+    i, j := 0, 0
+    for i < len(nums1) && j < len(nums2) {
+        if nums1[i] < nums2[j] {
+            i++
+        } else if nums1[i] > nums2[j] {
+            j++
+        } else {
+            return nums1[i]
+        }
+    }
+    return -1
+}
+```
+
+很明显题干中给出了是一个已经排序好了的两个数组，这里就可以利用排序的性质然后双指针就行了
+
+
+
+##  88.合并两个有序数组(双指针)
+
+```cpp
+class Solution {
+public:
+    void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
+        int p = m+n-1, p1 = m-1, p2 = n-1;
+        while(p2 >= 0) {
+            if(p1 >= 0 && nums1[p1] > nums2[p2]) {
+                nums1[p--] = nums1[p1--];
+            } else {
+                nums1[p--] = nums2[p2--];
+            }
+        }
+    }
+};
+```
+
+
+
+```go
+func merge(nums1 []int, m int, nums2 []int, n int)  {
+    p1, p2, p := m-1, n-1, m+n-1
+    for p2 >= 0 {
+        if p1 >= 0 && nums1[p1] > nums2[p2] {
+            nums1[p] = nums1[p1]
+            p--
+            p1--
+        } else {
+            nums1[p] = nums2[p2]
+            p--
+            p2--
+        }
+    }
+}
+```
+
+突然感觉这个逆向思维很重要！特别是对于双指针来说，遍历方向的不同确实能解决不同的题目！之前是逆向思维对于解题的思考，现在是逆向遍历的思维，为什么要逆向遍历呢？这里是为了解决数组赋值过程中的覆盖问题，你只有从后往前遍历才能保证不会覆盖数组。然后就是强调写法上面，我觉得要扣的细节还挺多的，类似于这样的合并问题一定要考虑的点就是哪个数组会有剩余，需要把剩余的部分全部补上，有时候出题人就会故意出这种陷阱。在这个循环中，当nums1数组遍历完之后就是将nums2补全了，所以循环的条件就是`while(p2>=2)`，因为是加载nums1数组的后面所以只需要在里面的if语句中判断p1的值即可
+
+
+
+##  2570.合并两个二维数组-求和法(双指针、哈希表)
+
+双指针法：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> mergeArrays(vector<vector<int>>& nums1, vector<vector<int>>& nums2) {
+        vector<vector<int>> ans;
+        int i = 0, j = 0;
+        while(i < nums1.size() && j < nums2.size()) {
+            auto x = nums1[i], y = nums2[j];
+            if(x[0] == y[0]) {
+                x[1]+=y[1];
+                ans.push_back(x);
+                i++;
+                j++;
+            } else if(x[0] < y[0]) {
+                ans.push_back(x);
+                i++;
+            } else {
+                ans.push_back(y);
+                j++;
+            }
+        }
+
+        while(i < nums1.size()) {
+            auto x = nums1[i];
+            ans.push_back(x);
+            i++;
+        }
+        while(j < nums2.size()) {
+            auto y = nums2[j];
+            ans.push_back(y);
+            j++;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+哈希表法：
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> mergeArrays(vector<vector<int>>& nums1, vector<vector<int>>& nums2) {
+        map<int, int> mp;
+        for(auto n1 : nums1) mp[n1[0]] += n1[1];
+        for(auto n2 : nums2) mp[n2[0]] += n2[1];
+        vector<vector<int>> ans;
+        for(auto [x, y] : mp) ans.push_back({x,y});
+        return ans;
+    }
+};
+```
+
+自己写的双指针简直就是屎山，写的自己都有点不想写了，最后还是硬着头皮写下去了，至少还是过了，一看题解发现蛙神写的好简洁！理解的角度不同方法就不一样，而且简洁很多！哈希法是用的容器map而不是unordered_map，由于这里最后是要返回以键值排序的ans序列，所以这里的哈希表一定是带有自动排序功能的map，还是挺好理解的！
+
+
+
+##  LCP18.早餐组合(双指针)
+
+题解：
+
+```cpp
+class Solution {
+public:
+    int breakfastNumber(vector<int>& staple, vector<int>& drinks, int x) {
+        ranges::sort(staple);
+        ranges::sort(drinks);
+        int i = 0, j = drinks.size()-1, ans = 0, mod = 1e9+7;
+        for(int i = 0; i < staple.size(); i++) {
+            while(j >= 0 && staple[i]+drinks[j] > x) j--;
+            if(j == -1) return ans;
+            ans = (ans+j+1)%mod;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func breakfastNumber(staple []int, drinks []int, x int) int {
+    sort.Ints(staple)
+    sort.Ints(drinks)
+    j, ans, mod := len(drinks)-1, 0, 1000000007
+    for _, val := range staple {
+        for j >= 0 && val+drinks[j] > x {
+            j--
+        }
+        if j == -1 {
+            return ans
+        }
+        ans = (ans+j+1)%mod
+    }
+    return ans
+}
+```
+
+
+
+
+
+自己写的(超时了)：
+
+```cpp
+class Solution {
+public:
+    int breakfastNumber(vector<int>& staple, vector<int>& drinks, int x) {
+        ranges::sort(staple);
+        sort(drinks.rbegin(), drinks.rend());
+        int i = 0, j = 0, ans = 0, mod = 1e9+7;
+        for(int i = 0; i < staple.size(); i++) {
+            for(int j = 0; j < drinks.size(); j++) {
+                if(staple[i]+drinks[j] <= x) {
+                    cout << drinks.size()-j << " ";
+                    ans = (ans+drinks.size()-j)%mod;
+                    break;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+这一题加深了我对双指针的理解了，为什么我的代码会超时？那是因为每一次j都是从0开始的这样会比题解跑更多次，题解的意思是i从前往后遍历，j从后往前遍历，当i增大时，j只需要在上一层循环的位置左移即可，并不需要再从头开始，这是因为两个数组排序后具有单调性。
+
+
+
+
+
+
+
 
 
 
