快速幂和筛素数的总结

--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -3211,8 +3211,6 @@ vector<int> maxSlidingWindow(vector<int>& nums, int k) {
 
 三个步骤：入、更新数据、出。几乎适用于所有定长滑动窗口的题目，当然，顺序不同代码逻辑就会有少许差异，总的来说这三个步骤一定是不能少的。一定是入、更新答案、出！
 
-
-
 总结：解决最长、最短子数组长度、子数组个数
 
 
@@ -3287,6 +3285,16 @@ else cout << "不是平方数";
 
 拿蓝桥算法季度赛4为例，第四题出现了一个较为复杂了判断时间先后的问题，输入的时候给出的时间样式大致为`HH:MM:SS`这种字符串的格式。这里的办法是先统一单位，将单位全部向小的转移，这可以在函数外实现，也可以用lambda表达式来实现。这样在输入之后直接都统一成了int类型了，这样会简化代码很多！
 
+```cpp
+auto trans = [&]() {
+    string s;
+    cin >> s;
+    return stoi(s.substr(0, 2))*3600+stoi(s.substr(3, 2))*60+stoi(s.substr(6, 2));
+}; 
+```
+
+
+
 
 
 ###  数位之和两种写法---循环、字符串
@@ -3305,6 +3313,100 @@ for(char c : s) ans += c-'0';
 
 
 
+
+###  求素数的三种方法(式除法、埃式筛、线性筛或称欧拉筛)
+
+也是接受了之前一直很难理解的东西了，果然以前弄不懂的最终还是会给自己一个暴击！这个求素数的题出现在牛客练习赛129上。
+**试除筛**
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    auto isprime = [&](int x) {
+        if(x < 2) return false;
+        for(int i = 2; i*i <= x; i++) {
+            if(x%i == 0) return false;
+        }
+        return true;
+    };
+    //输出n以内的素数
+    for(int i = 2; i <= n; i++) {
+        if(isprime(i)) cout << i << " ";
+    }
+}
+```
+
+这里有一点点的优化就是`i*i <= x`，这是通过性质来判断的，如果i是x的一个因子，那么x/i也会是x的一个因子，这两个因子又分居在根号n的左右两端，所以循环条件在`i*i <= x`即可
+
+
+
+**埃式筛**
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<bool> isPrime(n+1, true);
+    for(int i = 2; i <= n; i++) {
+        //是素数
+        if(prime[i]) {
+            for(int j = i*i; j <= n; j += i) {
+                prime[j] = false;
+            }
+        }
+    }
+
+    for(int i = 2; i <= n; i++) {
+        if(prime[i]) cout << i << " ";
+    }
+}
+```
+
+先判断是否为素数，如果为素数那么再进行将后面的合数筛选掉
+
+
+
+**线性筛（欧拉筛）**
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> primes;
+    vector<bool> isPrime(n+1, true);
+    for(int i = 2; i <= n; i++) {
+        //是素数
+        if(isPrime[i]) primes.push_back(i);
+        for(int j = 0; j < primes.size() && i*primes[j] <= n; j++) {
+            isPrime[i*primes[j]] = false;
+            if(i%primes[j] == 0) break;
+        }
+    }
+
+    for(auto p : primes) cout << p << " ";
+}
+```
+
+不同于埃式筛，这里是从最小质因数开始筛，因为埃式筛会有很多重复筛的地方，比如12和18，他们先后会被2和3筛，所以会有重复的地方，用线性筛就只会被2筛掉
+
+
+
+###  快速幂
+
+```cpp
+auto quickPow = [&](ll x, ll n) {
+    ll res = 1;
+    while(n > 0) {
+        if(n&1) res  = (res*x)%mod;
+        x = x*x%mod;
+        n >>= 1;
+    }
+    return res;
+};
+```
+
+重新理解快速幂，这个函数是求以x为底数n次幂的结果，循环改变的量是指数，当最低位为1的时候累乘答案，指数n不断右移
 
 
 
