牛客练习赛129复盘签到提

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1519,6 +1519,63 @@ void solve(){
 
 
 
+###  练习赛129
+
+####  A.数数(埃式筛法)
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<int> cnt(n+1, 0);
+    for(int i = 2; i <= n; i++) {
+        //是素数
+        if(cnt[i] == 0) {
+            for(int j = i; j <= n; j += i) {
+                cnt[j]++;
+            }
+        }
+    }
+
+    int ans = 0;
+    for(int i = 2; i <= n; i++) {
+        if(cnt[i] > 1) ans++;
+    }
+    
+    cout << ans;
+}
+```
+
+算是复习了一下求素数的三个方法吧，加强一下记忆，之前每次遇到这个就放弃了，求素数一共有三种方法：试除法、埃式筛、线性筛。放到9月的总结部分啦~
+
+
+
+####  B.三位出题人(快速幂)
+
+```cpp
+void solve() {
+    ll n, m;
+    cin >> n >> m;
+    int mod = 1e9+7;
+    auto quickPow = [&](ll x, ll n) {
+        ll res = 1;
+        while(n > 0) {
+            if(n&1) res  = (res*x)%mod;
+            x = x*x%mod;
+            n >>= 1;
+        }
+        return res;
+    };
+    cout << quickPow((quickPow(2, m)-2+mod)%mod, n)%mod << endl;
+}
+```
+
+巩固一下快速幂的写法，并纠正了对快速幂的理解，其实快速幂这个函数的意思是求x为底数n为指数的结果，当初一直认为快速幂只能求以2为底数的幂。。。再就是要发掘这个数学关系很重要，推到不出来这个数学结论也很刺挠，C(m,k)的组合数之和为`2^m`
+
+
+
+
+
 
 
 
