--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -840,6 +840,103 @@ public:
 
 
 
+###  双周赛140
+
+####  替换为数位和以后的最小元素(模拟)
+
+```cpp
+class Solution {
+public:
+    int minElement(vector<int>& nums) {
+        int ans = 10001;
+        for(auto n : nums) {
+            int bit = 0;
+            for(int x = n; x > 0; x /= 10) bit += x%10;
+            ans = min(ans, bit);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func minElement(nums []int) int {
+    ans := 10001
+    for _, x := range nums {
+        bit := 0
+        for y := x; y > 0; y /= 10 {
+            bit += y%10
+        }
+        ans = min(ans, bit)
+    }
+    return ans
+}
+```
+
+
+
+
+
+####  3301.高度互不相同的最大塔高和(贪心)
+
+```cpp
+class Solution {
+public:
+    long long maximumTotalSum(vector<int>& maximumHeight) {
+        long long ans = 0, now = 1e10;
+        sort(maximumHeight.rbegin(), maximumHeight.rend());
+        for(int x : maximumHeight) {
+            now = min(now, 1LL*x);
+            if(now <= 0) return -1;
+            ans += now;
+            now--;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+
+
+
+
+
+
+###  周赛417
+
+####  找出第k个字符I
+
+模拟法：
+
+```cpp
+class Solution {
+public:
+    char kthCharacter(int k) {
+        string s = "a";
+        while(s.size() < k) {
+            string tmp;
+            for(char c : s) {
+                tmp.push_back((c+1-'a')%26+'a');
+            }
+            s += tmp;
+        }
+        return s[k-1];
+    }
+};
+```
+
+
+
+
+
+
+
+
+
 
 
 ##  牛客
