--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -3095,8 +3095,6 @@ func breakfastNumber(staple []int, drinks []int, x int) int {
 
 
 
-
-
 自己写的(超时了)：
 
 ```cpp
@@ -3123,6 +3121,98 @@ public:
 这一题加深了我对双指针的理解了，为什么我的代码会超时？那是因为每一次j都是从0开始的这样会比题解跑更多次，题解的意思是i从前往后遍历，j从后往前遍历，当i增大时，j只需要在上一层循环的位置左移即可，并不需要再从头开始，这是因为两个数组排序后具有单调性。
 
 
+
+
+
+##  2073.买票需要的时间(循环数组)
+
+```cpp
+class Solution {
+public:
+    int timeRequiredToBuy(vector<int>& tickets, int k) {
+        int ans = 0, n = tickets.size();
+        for(int i = 0; tickets[k] > 0; i++) {
+            if(tickets[i%n] > 0) {
+                tickets[i%n]--;
+                ans++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func timeRequiredToBuy(tickets []int, k int) int {
+    ans, n := 0, len(tickets)
+    for i := 0; tickets[k] > 0; i++ {
+        if tickets[i%n] > 0 {
+            tickets[i%n]--
+            ans++
+        }
+    }
+    return ans
+}
+```
+
+一般这种从对头操作完之后又回到队尾这种操作都是用循环数组来写，这一题还是很好想出来的
+
+
+
+##  34.在排序数组中查找元素的第一个和最后一个位置
+
+```cpp
+class Solution {
+public:
+
+    //左闭右闭写法 [l, r]
+    int lower_bound1(vector<int>& nums, int target) {
+        int l = 0, r = nums.size()-1;
+        //区间没有元素的状态是l>r 那么上一个状态(l<=r)就是循环条件
+        while(l <= r) {
+            int mid = l+(r-l)/2;
+            if(nums[mid] < target) l = mid+1;
+            else r = mid-1;
+        }
+        return l;
+    }
+
+    //左闭右开写法 [l, r)
+    int lower_bound2(vector<int>& nums, int target) {
+        int l = 0, r = nums.size();
+        //区间没有元素的状态是l==r 那么上一个状态(l<r)就是循环条件
+        while(l < r) {
+            int mid = l+(r-l)/2;
+            if(nums[mid] < target) l = mid+1;
+            else r = mid;   //哪边是开区间，那边就不需要1
+        }
+        return l;   //return r也行
+    }
+
+    //左开右开写法 (l, r)
+    int lower_bound3(vector<int>& nums, int target) {
+        int l = -1, r = nums.size();
+        //区间没有元素的状态是l+1==r 那么上一个状态(l+1<r)就是循环条件
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(nums[mid] < target) l = mid;
+            else r = mid;   //哪边是开区间，那边就不需要1
+        }
+        return l+1; //return 也行
+    }
+
+    vector<int> searchRange(vector<int>& nums, int target) {
+        int start = lower_bound3(nums, target);
+        if(start == nums.size() || nums[start] != target) return {-1, -1};
+        int end = lower_bound1(nums, target+1)-1;
+        return {start, end};
+    }
+};
+```
+
+属于是重温了，最近二分的题目遇到的太多了，之前算是浅浅了解了一下，这次系统性的刷一遍
 
 
 
