--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -232,3 +232,161 @@ public:
 这属于是一个设计题，我觉得还是挺新颖的，是没有见过的类型的二分，要是能想到这种思路真的得要有一定的积累。最开始自己写的时候超时了，想着每一次query就创建一个数组t然后构建一个[left,right]的数组、排序后再二分找到这个value的第一个和最后一个下标，这样就能求出它出现的次数了，这样只能过部分样例，果然还是给卡住了，query调用的越多构造数组+排序的时间开销就会大很多，所以就超时了。
 
 刚开始看灵神的代码理解起来还有点费劲，但是看完之后感觉给了我一个二分的一个很新颖的点，它是首先用哈希表来保存每个数出现的下标，用个列表存起来，所以哈希表的类型是`unordered_map<int, vector<int>> pos;`代表的是值到对应下标的映射集，这个就很巧妙！为什么呢？因为每个映射集是有序的！这样二分的就不再是value了而是二分的下标！也就是这里的left和right，我天哪真妙！
+
+
+
+##  2563.统计公平数对的数目(枚举、二分查找)
+
+```cpp
+class Solution {
+public:
+
+    int lowerBound(vector<int> nums, int right, int target) {
+        int l = 0, r = right;
+        while(l <= r) {
+            int mid = l+(r-l)/2;
+            if(nums[mid] < target) l = mid+1;
+            else r = mid-1;
+        }
+        return l;
+    }
+
+    long long countFairPairs(vector<int>& nums, int lower, int upper) {
+        ranges::sort(nums);
+        //0 1 4 4 5 7
+        long long ans = 0;
+        for(int j = 0; j < nums.size(); j++) {
+            auto r = upper_bound(nums.begin(), nums.begin()+j, upper-nums[j]);
+            auto l = lower_bound(nums.begin(), nums.begin()+j, lower-nums[j]);
+            ans += r-l;
+        }
+        return ans;
+    }
+};
+```
+
+不知道为什么这一题只能用库函数解决，自己写的二分法反而过不了，会爆内存，实在是不能理解。当然做完这一题后对二分又有了新的理解，第一点就是排序上，最开始自己想的时候没有想出来这个数组是能够排序的，排序其实是不会影响答案的，稳妥起见的话最好还是举个例子比较好，可能是第二个条件没有理解好，如果改成`lower <= nums[i] < nums[j] <= upper`的话就一定不能排序了。然后就是对二分的理解了，解题过程有一种枚举右+二分左的感觉，感觉大部分我看不出来的二分题就是这种感觉，不知道这样一种思路。还有就是循环不变量的思考，贴一个评论区的代码，对理解循环不变量有了新的认识：
+
+```cpp
+//返回的是第一个小于等于target的下标 这里的循环不变量是r
+int lowerBound(vector<int> nums, int right, int target) {
+    int l = 0, r = right;
+    while(l <= r) {
+        int mid = l+(r-l)/2;
+        if(nums[mid] > target) r = mid-1;
+        else l = mid-1;
+    }
+    return r;
+}
+```
+
+
+
+
+
+##  2856.删除数对后的最小数组长度(哈希、二分、数学)
+
+哈希：
+
+```cpp
+class Solution {
+public:
+    int minLengthAfterRemovals(vector<int>& nums) {
+        unordered_map<int, int> cnt;
+        int mx = 0, n = nums.size();
+        for(auto x : nums) {
+            cnt[x]++;
+            mx = max(mx, cnt[x]);
+        }
+        return max(mx*2-n, n%2);
+    }
+};
+```
+
+
+
+二分：
+
+```cpp
+class Solution {
+public:
+    int minLengthAfterRemovals(vector<int>& nums) {
+        int mx = 0, n = nums.size(), x = nums[n/2];
+        mx = upper_bound(nums.begin(), nums.end(), x)-lower_bound(nums.begin(), nums.end(), x);
+        return max(mx*2-n, n%2);	//n%2是考虑了mx*2<n的奇偶情况
+    }
+};
+```
+
+
+
+```go
+func minLengthAfterRemovals(nums []int) int {
+    n := len(nums)
+    mx, x := 0, nums[n/2]
+    mx = sort.SearchInts(nums, x+1)-sort.SearchInts(nums, x)
+    return max(mx*2-n, n%2)
+}
+```
+
+
+
+这一题主要是需要数学推导一下，需要从特殊到一般手玩一下这个题，感觉照着题单刷题容易陷入思维定式，题解的max函数用的相当巧妙，直接简化了ifelse的逻辑一行就搞定了三种不同情况，n%2是考虑了mx*2<n的奇偶情况，当mx * 2 > n的时候表明删不完最多的那个元素
+
+
+
+##  1283.使结果不超过阈值的最小除数(二分答案)
+
+```cpp
+class Solution {
+public:
+
+    int check(vector<int> nums, int x) {
+        int sum = 0;
+        for(auto n : nums) {
+            sum += (n+x-1)/x;
+        }
+        return sum;
+    }
+
+    int smallestDivisor(vector<int>& nums, int threshold) {
+        int l = 0, r = ranges::max(nums);
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(check(nums, mid) > threshold) l = mid; //表明除数小于threshold
+            else r = mid;
+        }
+        return r;
+    }
+};
+```
+
+二分答案的第一题！虽然自己想不出来，但是好歹是看完题解能够明白这个二分答案是什么意思了！感觉顿悟了！为什么`if(check(nums, mid) > threshold)`对应的是`l = mid`，当商的和大于这个阈值的话就表明这个对应的除数应该小了，所以修改的是左边界，这里还是和二分查找有一点点的区别的！这里我试了一下左闭右开和左开右开的区间都是能写的，可是闭区间是写不了的，要不还是听灵神的吧，二分都用开区间写吧，主要是区间这一块的边界问题还是理解比较透彻了，几个区间的转化、边界修改还是改的出来的
+
+
+
+##  2187.完成旅途的最少时间(二分答案)
+
+```cpp
+class Solution {
+public:
+    long long minimumTime(vector<int>& time, int totalTrips) {
+        auto check = [&](long long x) {
+            long long sum = 0;
+            for(int t : time) {
+                sum += x/t;
+                if(sum >= totalTrips) return true;
+            }
+            return false;
+        };
+        long long l = ranges::min(time)-1, r = ranges::max(time)*(long long)totalTrips;
+        while(l+1 < r) {
+            long long mid = l+(r-l)/2;
+            (check(mid) ? r : l) = mid;
+        }
+        return r;
+    }
+};
+```
+
+其实自己写的和题解还是很像的，它是在如果sum>=totoalTrips就直接返回了，因为这种情况下就是更新右边界，可能就是思考的时候错了，以为跟上一题是一样的，只不过这里是地板除。这样理解是不正确的。除了要会写check函数之外，还有一点很重要的就是你的check函数是和你的答案正相关还是负相关，这对二分答案还是很关键的，就比如上面的1283我写的check函数和那个最小的除数是负相关的关系，所以在改变l和r的时候就是反着来的了
