--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -341,7 +341,7 @@ func minLengthAfterRemovals(nums []int) int {
 class Solution {
 public:
 
-    int check(vector<int> nums, int x) {
+    int check(vector<int>& nums, int x) {
         int sum = 0;
         for(auto n : nums) {
             sum += (n+x-1)/x;
@@ -353,8 +353,8 @@ public:
         int l = 0, r = ranges::max(nums);
         while(l+1 < r) {
             int mid = l+(r-l)/2;
-            if(check(nums, mid) > threshold) l = mid; //表明除数小于threshold
-            else r = mid;
+            if(check(nums, mid) <= threshold) r = mid;
+            else l = mid;
         }
         return r;
     }
@@ -375,14 +375,14 @@ public:
             long long sum = 0;
             for(int t : time) {
                 sum += x/t;
-                if(sum >= totalTrips) return true;
             }
-            return false;
+            return sum;
         };
         long long l = ranges::min(time)-1, r = ranges::max(time)*(long long)totalTrips;
         while(l+1 < r) {
             long long mid = l+(r-l)/2;
-            (check(mid) ? r : l) = mid;
+            if(check(mid) >= totalTrips) r = mid;
+            else l = mid;
         }
         return r;
     }
@@ -390,3 +390,166 @@ public:
 ```
 
 其实自己写的和题解还是很像的，它是在如果sum>=totoalTrips就直接返回了，因为这种情况下就是更新右边界，可能就是思考的时候错了，以为跟上一题是一样的，只不过这里是地板除。这样理解是不正确的。除了要会写check函数之外，还有一点很重要的就是你的check函数是和你的答案正相关还是负相关，这对二分答案还是很关键的，就比如上面的1283我写的check函数和那个最小的除数是负相关的关系，所以在改变l和r的时候就是反着来的了
+
+
+
+##  1011.在D天内送达包裹的能力(二分答案)
+
+```cpp
+class Solution {
+public:
+    int shipWithinDays(vector<int>& weights, int days) {
+        auto check = [&](int x) {
+            int sum = 0, cnt = 0;
+            for(auto& w : weights) {
+                if(sum+w > x) {
+                    sum = 0;
+                    cnt++;
+                }
+                sum += w;
+            }
+            cnt++;
+            return cnt;
+        };
+
+        //最小值不能写错，惯性思维成了1最小
+        int l = ranges::max(weights)-1, r = 500*5*1e4;
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(check(mid) <= days) r = mid;
+            else l = mid;
+        }
+        return r;
+    }
+};
+```
+
+这一题其实自己写的挺完美的了，唯一不足的就是l的初始化没写对，我自己写的时候l初始化成了1，其实这并不对，因为weight数组中的元素不一定都是最小值为1，比如最小值为5，假设最后答案二分到了1，那么无论你如何都运送不了包裹。
+
+
+
+##  875.爱吃香蕉的珂珂(二分答案)
+
+```cpp
+class Solution {
+public:
+    int minEatingSpeed(vector<int>& piles, int h) {
+        auto check = [&](long long k) {
+            long long cnt = 0;
+            for(int p : piles) cnt += (p+k-1)/k;
+            return cnt;
+        };
+
+        long long l = 0, r = ranges::max(piles);
+        while(l+1 < r) {
+            long long mid = l+(r-l)/2;
+            if(check(mid) <= h) r = mid;
+            else l = mid;
+        }
+        return r;
+
+    }
+};
+```
+
+check函数没写对。。。二分的部分还是想得明白了，这一题的意思其实就是check函数向上取整除
+
+
+
+##  2594.修车的最少时间(二分答案)
+
+```cpp
+class Solution {
+public:
+    long long repairCars(vector<int>& ranks, int cars) {
+        auto check = [&](long long t) {
+            long long sum = 0;
+            for(int r : ranks) sum += sqrt(t/r);
+            return sum;
+        };
+        long long l = 0, r = 1e15;
+        while(l+1 < r) {
+            long long mid = l+(r-l)/2;
+            if(check(mid) < cars) l = mid;
+            else r = mid;
+        }
+        return r;
+    }
+};
+```
+
+第一次顺利ac！唯一搞不懂的还是l和r的初始化，这一题l还是搞清楚了，它一定不可能是0，r就随便取了一个很大的数结果过了哈哈哈
+
+
+
+
+
+##  275.H指数II(二分答案、求最大)
+
+```cpp
+class Solution {
+public:
+    int hIndex(vector<int>& citations) {
+        int n = citations.size();
+        int l = 0, r = n+1; //初始化也有点变化 l最大是n，所以开区间写法r初始化为n+1
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(citations[n-mid] >= mid) l = mid;
+            else r = mid;
+        }
+        return l;
+    }
+};
+```
+
+
+
+```go
+func hIndex(citations []int) int {
+    n := len(citations)
+    l, r := 0, n+1
+    for l+1 < r {
+        mid := l+(r-l)/2;
+        if citations[n-mid] >= mid {
+            l = mid
+        } else {
+            r = mid
+        }
+    }
+    return l
+}
+```
+
+和前面几题基本上相反，这里是求最大，大致明白了check函数对应哪个边界移动了，请看我的`算法技巧及模板总结`
+
+
+
+
+
+##  2226.每个小孩最多能分到多少糖果(二分答案求最大)
+
+```cpp
+class Solution {
+public:
+    int maximumCandies(vector<int>& candies, long long k) {
+        long long l = 0, r = ranges::max(candies)+1;
+        auto check = [&](long long x) {
+            long long sum = 0;
+            for(int c : candies) {
+                sum += c/x;
+                if(sum >= k) return true;
+            }
+            return false;
+        };
+        int t = ranges::min(candies);
+        while(l+1 < r) {
+            long long mid = l+(r-l)/2;
+            if(check(mid)) l = mid;
+            else r = mid;
+        }
+        return l;
+    }
+};
+```
+
+虽然总结是到位了，但是目前落在题上还是有一点陌生的，这一次是错在了check函数和右边界的初始化上
