添加二分算法部分

--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1,6 +1,8 @@
 #  算法技巧及模板总结
 
-##  二分查找
+##  二分
+
+###  二分查找
 
 以34.在排序数组中查找元素的第一个和最后一个位置经典题目为例，这的`lower_bound()`函数是用来求第一个大于等于target的下标，这一个函数其实能解决大部分问题，主要有大于等于、大于、小于、小于等于，但是都能够通过这一个函数转化过来
 
@@ -49,6 +51,22 @@ int lower_bound3(vector<int>& nums, int target) {
     //区间没有元素的状态是l+1==r 那么上一个状态(l+1<r)就是循环条件
     while(l+1 < r) {
         int mid = l+(r-l)/2;
+		if(nums[mid] >= target) r = mid;
+        else l = mid;
+    }
+    return r
+}
+```
+
+
+
+```cpp
+//左开右开写法 (l, r)
+int lower_bound3(vector<int>& nums, int target) {
+    int l = -1, r = nums.size();
+    //区间没有元素的状态是l+1==r 那么上一个状态(l+1<r)就是循环条件
+    while(l+1 < r) {
+        int mid = l+(r-l)/2;
         if(nums[mid] < target) l = mid;
         else r = mid;   //哪边是开区间，那边就不需要1
     }
@@ -64,6 +82,39 @@ int lower_bound3(vector<int>& nums, int target) {
 4、哪边是开区间哪边就不能加一
 5、第一个if语句干脆全都写成`if(nums[mid] < target) l = ...`省略号处更具区间开闭情况来判断是否加一
 6、最后返回的下标，看循环不变量
+
+
+
+###  二分答案
+
+二分答案分为两种，求最小和求最大，这有点联想到高中的知识了，求最小我们就需要找大于等于的式子，求最大就需要找小于等于的式子。
+
+
+
+**求最小**
+
+今天刷了二分答案求最小，算是打开新世界的大门了，有多了一个求最小的方法了，刷到的这几个题都感觉有一个特点，应该也可以算得上是单调性吧，然后就是一定要会写check函数，然后呢check函数的返回值与二分的答案的正关系或者负关系要理清，这对应在二分的时候对边界的修改是不同的，所以我觉得要判断这一点很重要，其次就是二分答案的初始化一定要写对，今天也在这里栽了跟头。
+
+
+
+**求最大**
+
+大致和求最小相反，找到的规律和如何记忆放在下面了
+
+
+
+**区分求最大、最小**
+
+当已经分析到能够用二分答案的写法来解决这一题的时候需要思考一下步骤：先看答案求的是最大还是最小，这样可以先判断出是二分最小的方法还是二分最大的方法，其次找到题干中的另外一个限定条件，这通常就是check函数的结果，只有check函数写对了，边界才能正确的移动，边界如何移动就需要判断是求最大还是最小
+
+以开区间为例：
+求最小：`check(mid) == true ===> r = mid，最后返回r`
+求最大：`check(mid) == true ===> l = mid，最后返回l`
+什么情况才是true呢？这就要从题目中找了，通常在给定的另一个参数的限定，比如875给了一个参数`int h`，题干中最后问： 返回她可以在 `h` 小时内吃掉所有香蕉的最小速度 `k` ，这里的限定就是<=h，那么二分答案的时候check里计算sum的时候如果最后的sum<=h那么就为true
+怎么确定左右边界的初始值？----得先看是求最小还是求最大，以求最小为例，最后返回的是r，所以就以r为视角去找能够取的最大和最小值，注意那么右边界其实可以无限大，只需要左边界是r取得的最小值-1即可。
+同理求最大就以l为视角，右边界就为l能取的最大值+1
+
+
 
 
 
@@ -124,3 +175,5 @@ public:
 ##  常见错误总结
 
 运算优先级：与运算要比或运算的优先级高
+
+写函数的时候，或者传入数组的时候最好加上引用，今天也是遇到了一个因为没有为数组加上引用而导致爆内存的问题了，在调用函数的时候如果参数是数组，你不写引用的话那么会copy一份那个数组，所以这会耗费一定的空间。
