--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -154,6 +154,44 @@ public:
 
 
 
+##  dfs和bfs
+
+力扣平台有时候给你的就是一个邻接表，这意味着它直接帮你初始化邻接表了就只需要管如何搜索就行了，但是对于其它的平台就都需要自己初始化邻接表，下面是初始化邻接表的代码示范：
+表示x点和y点有边的邻接表
+
+```cpp
+vector<vector<int>> adj(n);	//这个n一定不能忘
+for (auto &edge : edges) {
+    int x = edge[0], y = edge[1];
+    adj[x].emplace_back(y);
+    adj[y].emplace_back(x);
+}
+```
+
+
+
+除此之外，有时候也可以初始化一个二维矩阵，比如g[i] [j] = 1表示点i和j有关系，这样的情况就不需要像上面的操作了，就直接搜索这个二维矩阵就行了
+
+
+
+###  dfs求连通块个数
+
+```cpp
+vector<bool> visited(n, false);
+function<int(int)> dfs = [&](int i) -> int{
+    int sz = 1;
+    visited[i] = true;
+    for(int& a : adj[i]) {
+        if(!visited[a]) sz += dfs(a);
+    }
+    return sz;
+};
+```
+
+
+
+
+
 
 
 ##  思考问题的启发
