--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -553,3 +553,140 @@ public:
 ```
 
 虽然总结是到位了，但是目前落在题上还是有一点陌生的，这一次是错在了check函数和右边界的初始化上
+
+
+
+##  3281.范围内整数的最大得分(二分答案、最大化最小值)
+
+```cpp
+class Solution {
+public:
+    int maxPossibleScore(vector<int>& start, int d) {
+        sort(start.begin(), start.end());
+        auto check = [&](long long score) {
+            long long x = LLONG_MIN;
+            for(int s : start) {
+                x = max(x+score, (long long)s);
+                if(x > s+d) return false;
+            }
+            return true;
+        };
+
+        long long l = 0, r = 1e10;
+        while(l+1 < r) {
+            long long mid = l+(r-l)/2;
+            if(check(mid)) l = mid;
+            else r = mid;
+        }
+        return l;
+    }
+};
+```
+
+最大化最小值本质来说就是二分答案求最大，这一题我觉得不好写的地方有check函数上，二分答案是二分的得分，然后要根据这个得分去判断能不能符合所有区间，这确实不是很好写
+
+
+
+##  410.分割数组的最大值(二分答案)
+
+```cpp
+class Solution {
+public:
+    int splitArray(vector<int>& nums, int k) {
+        auto check = [&](int mx) {
+            int cnt = 1, sum = 0;
+            for(int n : nums) {
+                if(sum+n <= mx) sum += n;
+                else {
+                    if(cnt++ == k) return false;
+                    sum = n;
+                }
+            }
+            return true;
+        };
+        int r = reduce(nums.begin(), nums.end()), l = ranges::max(nums)-1;
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(check(mid)) r = mid;
+            else l = mid;
+        }
+        return r;
+    }
+};
+```
+
+这一题属于最大化最小，难点还是在check函数的书写上，发现难一点的二分困难点就不再于二分怎么写了，而是在check函数不知道怎么写了，看题解写的实现其实都没有那么复杂，主要也是没有遇到过吧
+
+
+
+##  2064.分配给商店的最多商品的最小值(二分答案)
+
+```cpp
+class Solution {
+public:
+    int minimizedMaximum(int n, vector<int>& quantities) {
+        auto check = [&](int mx) {
+            int sum = 0;
+            for(int q : quantities) {
+                sum += (q+mx-1)/mx;
+                if(sum > n) return false;
+            }
+            return true;
+        };
+
+        //其它完全正确 就是初始化写不对。。。
+        int l = 0, r = ranges::max(quantities);
+        while(l+1 < r) {
+            int mid = l+(r-l)/2;
+            if(check(mid)) r = mid;
+            else l = mid;
+        }
+        return r;
+    }
+};
+```
+
+这个l和r的初始化咋写啊啊啊啊啊！写了无数遍写不会！这一题的check函数还是好写，就是向上取整，之前也是写过了
+
+
+
+
+
+##  2316.统计无向图中无法互相到达点对数(dfs、乘法原理)
+
+```cpp
+class Solution {
+public:
+    long long countPairs(int n, vector<vector<int>>& edges) {
+        vector<vector<int>> adj(n); //这里必须要初始化adj大小为n
+        for(auto& e : edges) {
+            adj[e[0]].push_back(e[1]);
+            adj[e[1]].push_back(e[0]);
+        }
+
+        //求连通块个数
+        vector<bool> visited(n, false);
+        function<int(int)> dfs = [&](int i) -> int{
+            int sz = 1;
+            visited[i] = true;
+            for(int& a : adj[i]) {
+                if(!visited[a]) sz += dfs(a);
+            }
+            return sz;
+        };
+
+        long long ans = 0, total = 0;
+        for(int i = 0; i < n; i++) {
+            //找到了新的连通块
+            if(!visited[i]) {
+                long long sz = dfs(i);
+                ans += sz*total;
+                total += sz;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+求连通块个数的dfs感觉可以收藏起来当作模板来用，其次比较难想到的点就是这个乘法原理： 求连通块的大小的同时，用一个变量 total 维护前面求出的连通块的大小之和 。当前连通块的大小为 size，那么这个连通块中的每个点，与前面遍历过的连通块的每个点，都是无法互相到达的，根据乘法原理，这有 size⋅total 个，加到答案中。
