--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -690,3 +690,111 @@ public:
 ```
 
 求连通块个数的dfs感觉可以收藏起来当作模板来用，其次比较难想到的点就是这个乘法原理： 求连通块的大小的同时，用一个变量 total 维护前面求出的连通块的大小之和 。当前连通块的大小为 size，那么这个连通块中的每个点，与前面遍历过的连通块的每个点，都是无法互相到达的，根据乘法原理，这有 size⋅total 个，加到答案中。
+
+
+
+
+
+##  1319.连通网络的操作次数(dfs)
+
+```cpp
+class Solution {
+public:
+    int makeConnected(int n, vector<vector<int>>& connections) {
+        vector<bool> vis(n, false);
+        vector<vector<int>> adj(n);
+        for(auto& c :connections) {
+            adj[c[0]].emplace_back(c[1]);
+            adj[c[1]].emplace_back(c[0]);
+        }
+        function<void(int)> dfs = [&](int i) {
+            vis[i] = true;
+            for(int& a : adj[i]) {
+                if(!vis[a]) dfs(a);
+            }
+        };
+
+        if(n-1 > connections.size()) return -1;
+        int ans = 0;
+        for(int i = 0; i < n; i++) {
+            if(!vis[i]) {
+                dfs(i);
+                ans++;
+            }
+        }
+        return ans-1;
+    }
+};
+```
+
+
+
+```go
+func makeConnected(n int, connections [][]int) int {
+    vis := make([]bool, n)
+    adj := make([][]int, n)
+    for _, c := range connections {
+        v, w := c[0], c[1]
+        adj[v] = append(adj[v], w)
+        adj[w] = append(adj[w], v)
+    }
+
+    var dfs func(int)
+    dfs = func(i int) {
+        vis[i] = true
+        for _, a := range adj[i] {
+            if !vis[a] {
+                dfs(a)
+            }
+        }
+    }
+
+    if n-1 > len(connections) {
+        return -1
+    }
+
+    ans := 0
+    for i := 0; i < n; i++ {
+        if !vis[i] {
+            dfs(i)
+            ans++;
+        }
+    }
+    return ans-1
+}
+```
+
+哦耶自己独立ac了这一题，分析加上ac应该在10分钟左右，这个速度还是很满意的！主要是需要发掘到这一题其实就是求连通块的个数，最后答案就是连通块个数-1
+
+
+
+##  2492.两个城市间路径的最小分数(dfs)
+
+```cpp
+class Solution {
+public:
+    int minScore(int n, vector<vector<int>>& roads) {
+        vector<vector<pair<int, int>>> adj(n+1);
+        vector<bool> vis(n+1, false);
+        int path = INT_MAX;
+        for(auto& r : roads) {
+            adj[r[0]].push_back({r[1], r[2]});
+            adj[r[1]].push_back({r[0], r[2]});
+        }
+        
+        function<void(int)> dfs = [&](int i) {
+            vis[i] = true;
+            for(auto& a : adj[i]) {
+                path = min(path, a.second); //只能在if之前更新 自己写的时候这一行写在了if语句以内 导致wa了
+                if(!vis[a.first]) {
+                    dfs(a.first);
+                }
+            }
+        };
+
+        dfs(1);
+        return path;
+    }
+};
+```
+
