--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -798,3 +798,249 @@ public:
 };
 ```
 
+这一题与以往不同的就是在建图上面，这里是一个有权图，记在模板上吧，的确是没见过。另一个需要注意的就是这个path变量的更新，这一条语句不能放在了if语句以内，自己写的时候也是因为这个而wa了一发，仔细一想如果放在if语句里面的话就不会遍历完包含节点1的连通块的所有边了，自然就找不到这个最小path了
+
+
+
+##  2685.统计完全连通分量的数量(dfs)
+
+```cpp
+class Solution {
+public:
+    int countCompleteComponents(int n, vector<vector<int>>& edges) {
+        vector<vector<int>> adj(n);
+        for(auto e : edges) {
+            adj[e[0]].emplace_back(e[1]);
+            adj[e[1]].emplace_back(e[0]);
+        }
+
+        vector<bool> vis(n, false);
+        int v = 0, e = 0;
+        function<void(int)> dfs = [&](int i) {
+            vis[i] = true;
+            v++;
+            e += adj[i].size();
+            for(int& a : adj[i]) {
+                if(!vis[a]) dfs(a);
+            }
+        };
+
+        int ans = 0;
+        for(int i = 0; i < n; i++) {
+            if(!vis[i]) {
+                v = 0;
+                e = 0;
+                dfs(i);
+                ans += e == v*(v-1);    //找到边与点的数量关系
+            }
+        }
+        return ans;
+    }
+};
+```
+
+这一题解决的问题实际上就是求连通块的边数和点的个数，再通过两者的关系来判断出这个题意中的完全连通分量，注意每一次连通块的dfs求出来的边个数e是实际上边的个数的两倍！
+
+
+
+##  2192.有向无环图中一个节点的所有祖先(dfs)
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> getAncestors(int n, vector<vector<int>>& edges) {
+        vector<vector<int>> adj(n);
+        for(auto e : edges) {
+            adj[e[1]].emplace_back(e[0]);   //反向建图
+        }
+        
+        vector<int> vis(n, false);
+        vector<vector<int>> ans(n);
+        
+        function<void(int)> dfs = [&](int i) {
+            vis[i] = true;
+            for(int& a : adj[i]) {
+                if(!vis[a]) dfs(a);
+            }
+        };
+
+        for(int i = 0; i < n; i++) {
+            ranges::fill(vis, false);
+            dfs(i);
+            vis[i] = false;
+            for(int j = 0; j < n; j++) {
+                if(vis[j]) ans[i].emplace_back(j);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+这个反向建图真的很巧妙，也是第一次遇到有向图的建图方式了，就相当于只需要建立一次就行了
+
+
+
+##  2101.引爆最多的炸弹(dfs)
+
+```cpp
+class Solution {
+public:
+    int maximumDetonation(vector<vector<int>>& bombs) {
+        int n = bombs.size();
+        vector<vector<int>> adj(n);
+        for(int i = 0; i < n; i++) {
+            long long x = bombs[i][0], y = bombs[i][1], r = bombs[i][2];
+            for(int j = 0; j < n; j++) {
+                long long dx = x-bombs[j][0], dy = y-bombs[j][1];
+                if(i != j && dx*dx + dy*dy <= r*r) adj[i].emplace_back(j);
+            }
+        }
+
+        vector<bool> vis(n, false);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            vis[i] = true;
+            int cnt = 1;
+            for(int& a : adj[i]) {
+                if(!vis[a]) cnt += dfs(dfs, a);
+            }
+            return cnt;
+        };
+
+        int ans = 0;
+        for(int i = 0; i < n; i++) {
+            fill(vis.begin(), vis.end(), false);
+            ans = max(ans, dfs(dfs, i));
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maximumDetonation(bombs [][]int) int {
+    n := len(bombs)
+    adj := make([][]int, n)
+    for i, row1 := range bombs {
+        x, y, r := row1[0], row1[1], row1[2]
+        for j, row2 := range bombs {
+            if i == j {
+                continue
+            }
+            dx, dy := x-row2[0], y-row2[1]
+            if dx*dx + dy*dy <= r*r {
+                adj[i] = append(adj[i], j)
+            }
+        }
+    }
+
+    vis := make([]bool, n)
+    var dfs func(int) int
+    dfs = func(i int) int {
+        vis[i] = true
+        cnt := 1
+        for _, a := range adj[i] {
+            if !vis[a] {
+                cnt += dfs(a)
+            }
+        }
+        return cnt
+    }
+
+    ans := 0
+    for i := 0; i < n; i++ {
+        clear(vis)  //重置状态 等价于cpp的fill
+        ans = max(ans, dfs(i))
+    }
+    return ans
+}
+```
+
+第一次做这种关于坐标圆的问题，原来可以用dfs来解这种题，长见识了~灵神在题解中也强调了这一题不能用并查集来做，主要是在建图方面的不同，注意本题是有向图。例如炸弹 0 可以引爆炸弹 2，炸弹 1 可以引爆炸弹 2，对应有向边 0→2, 1→2，那么正确答案是 2。如果用并查集做的话，会把 0,1,2 三个点合并起来，计算出错误的答案 3。这里建立有向图就对应的爆炸关系，如果x能引爆y，那么在有向图就表示x->y。
+
+
+
+##  134.加油站(枚举右维护左)
+
+```cpp
+class Solution {
+public:
+    int canCompleteCircuit(vector<int>& gas, vector<int>& cost) {
+        int ans = 0, mins = 0, s = 0;
+        for(int i = 0; i < gas.size(); i++) {
+            s += gas[i]-cost[i];
+            if(s < mins) {
+                mins = s;
+                ans = i+1;
+            }
+        }
+        return s < 0 ? -1 : ans;
+    }
+};
+```
+
+
+
+```go
+func canCompleteCircuit(gas []int, cost []int) int {
+    ans, mins, s := 0, 0, 0
+    for i, x := range gas {
+        s += x-cost[i]
+        if s < mins {
+            mins = s
+            ans = i+1
+        }
+    }
+    
+    if s < 0 {
+        return -1
+    }
+    return ans
+}
+```
+
+这种题就是难在两点：1、要能想到枚举右维护左的方法。2、枚举右维护左写不写的明白。灵神的题解给出一个折线图来理解确实厉害
+
+
+
+##  3243.新增道路查询后的最短距离(bfs)
+
+```cpp
+class Solution {
+public:
+    vector<int> shortestDistanceAfterQueries(int n, vector<vector<int>>& queries) {
+        vector<vector<int>> adj(n);
+        for(int i = 1; i < n; i++) adj[i-1].emplace_back(i);
+
+        auto bfs = [&]() -> int {
+            vector<int> dis(n, -1);
+            queue<int> q;
+            q.push(0);
+            dis[0] = 0;
+            while(!q.empty()) {
+                int sn = q.front();
+                q.pop();
+                for(auto fn : adj[sn]) {
+                    //未被访问过
+                    if(dis[fn] == -1) {
+                        q.push(fn);
+                        dis[fn] = dis[sn]+1;
+                    }
+                }
+            }
+            return dis[n-1];
+        };
+
+        vector<int> ans;
+        for(auto q : queries) {
+            adj[q[0]].emplace_back(q[1]);
+            ans.emplace_back(bfs());
+        }
+        return ans;
+    }
+};
+```
+
+接下来就开始复习bfs的题了，建图就没什么好说的了，首先说说这一题只能用bfs来做，题干中很明显给出了求出最短路径长度，所以这一题暴力的思路就是每次添加边之后bfs一次，然后再维护答案。这里的题解是看的蛙神写的，它这里在每次的bfs中定义了一个dis数组，dis[n-1]就表示的是0到n-1的距离，所以bfs每次返回的就是dis[n-1]，和之前做的矩阵中bfs有一点点区别就是这里并不需要定义方向数组
