--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -159,6 +159,8 @@ public:
 力扣平台有时候给你的就是一个邻接表，这意味着它直接帮你初始化邻接表了就只需要管如何搜索就行了，但是对于其它的平台就都需要自己初始化邻接表，下面是初始化邻接表的代码示范：
 表示x点和y点有边的邻接表
 
+无权：
+
 ```cpp
 vector<vector<int>> adj(n);	//这个n一定不能忘
 for (auto &edge : edges) {
@@ -170,11 +172,25 @@ for (auto &edge : edges) {
 
 
 
+有权：
+
+```cpp
+vector<vector<pair<int, int>>> adj(n+1);
+for(auto& r : roads) {
+    adj[r[0]].push_back({r[1], r[2]});
+    adj[r[1]].push_back({r[0], r[2]});
+}
+```
+
+
+
+
+
 除此之外，有时候也可以初始化一个二维矩阵，比如g[i] [j] = 1表示点i和j有关系，这样的情况就不需要像上面的操作了，就直接搜索这个二维矩阵就行了
 
 
 
-###  dfs求连通块个数
+###  dfs求连通块节点个数
 
 ```cpp
 vector<bool> visited(n, false);
@@ -189,6 +205,56 @@ function<int(int)> dfs = [&](int i) -> int{
 ```
 
 
+
+
+
+##  乘法逆元
+
+这里就直接把灵神的结论搬过来吧~
+
+```cpp
+MOD = 1_000_000_007
+
+// 加
+(a + b) % MOD
+
+// 减
+(a - b + MOD) % MOD
+
+// 把任意整数 a 取模到 [0,MOD-1] 中，无论 a 是正是负
+(a % MOD + MOD) % MOD
+
+// 乘（注意使用 64 位整数）
+a * b % MOD
+
+// 多个数相乘，要步步取模，防止溢出
+a * b % MOD * c % MOD
+
+// 除（MOD 是质数且 b 不是 MOD 的倍数）
+a * qpow(b, MOD - 2, MOD) % MOD
+```
+
+乘法和加法都是很常见的，最需要注意的就是减法和除法，乘法逆元就是来解决这个除法的问题的。该方法是用快速幂(qpow)来计算逆元的。通过这样，我感觉可以重新写一遍快速幂的板子了。
+
+
+
+##  快速幂
+
+```cpp
+#define int long long
+const int mod=1e9+7;
+int qpow(int a, int n, int mod) {
+    int res = 1;
+    while(n) {
+        if(n&1) res = (res*a)%mod;
+        a = a*a%mod;
+        n >>= 1;
+    }
+    return res;
+}
+```
+
+学习了逆元求法之后总结了一个既适合求逆元的又适合普遍求快速幂的一段通用代码了，如果是求逆元，分子是什么qpow的第一个参数就是什么，第二个参数根据题意是以什么取模就填mod-2。总之第三个参数就是根据题意中的mod设置是多少就是多少
 
 
 
